--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>search for places</h1>
 
-<form id="placeSearch" class="" action="#" method="post">
+<form id="placeSearch" class="" action="/places" method="post">
   <label for="keyword"></label>
   <input type="text" name="keywordname" id="keyword">
   <input type="submit" name="submit-name" value="Search">
